<resources>
    <string name="app_name">PokemonGOFight</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_label_captured">Captured</string>
    <string name="text_label_my_team">My Team</string>
    <string name="text_label_community">Community</string>
    <string name="text_label_explore">Explore</string>

    <string name="wild_type">Wild</string>
    <string name="captured_type">Captured</string>
    <string name="captured_by_friend">Captured by friend</string>
    <string name="loading">loading …</string>
    <string name="ops_no_pokemon_found">Ops!No pokemon found</string>
    <string name="captured_at">captured at</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam urna libero, efficitur eu lacus lacinia, iaculis ornare nisi. Sed in felis quis nunc laoreet commodo at vel ipsum. Quisque et volutpat est. Sed quis aliquet justo. Integer placerat metus vitae arcu lobortis finibus. Suspendisse orci massa, pulvinar non urna nec, finibus ultrices arcu. Suspendisse lacinia tortor at congue vulputate. Nullam vulputate arcu at diam euismod mattis. Proin accumsan volutpat purus vel sodales. Praesent vel nisl placerat, porttitor mauris in, rutrum ipsum. Quisque at dictum diam, eget fermentum urna. Proin ipsum lacus, facilisis porttitor lorem sed, consequat sagittis velit. Mauris a velit tellus. Suspendisse pellentesque nunc non mi varius, non facilisis leo cursus. Curabitur sed dolor et est dignissim volutpat. Aenean viverra convallis auctor. Nullam et venenatis quam. Fusce imperdiet vestibulum pharetra. Nulla fringilla, odio vitae commodo commodo, erat lectus ultricies risus, quis pulvinar dui lorem id libero. Duis ut facilisis magna. Praesent ut maximus lectus. Suspendisse quis venenatis nibh, in maximus augue. Mauris lectus nulla, viverra sed rutrum non, mattis posuere nibh. Aliquam eu nisl sed lacus aliquam consequat. Nulla eget nulla et nulla posuere feugiat sit amet id ligula. Maecenas sed convallis nunc, et faucibus diam. Integer id posuere lorem. Proin nisi nibh, pulvinar in rhoncus eu, mollis eget tortor. Duis et ex sed eros suscipit tempus ut ac justo. Sed scelerisque nulla enim, vestibulum sagittis diam hendrerit non. Donec rutrum fringilla tincidunt. Phasellus quis mattis ex. Donec erat mauris, pharetra eget tincidunt at, interdum sed leo. Fusce odio felis, suscipit id rhoncus vitae, accumsan nec magna. Duis orci lectus, suscipit ac feugiat vitae, consectetur ac elit. Nunc erat mauris, euismod ut porta ac, tempus ac lectus. Phasellus quis elit non sapien porta molestie. Nam mauris orci, finibus in mattis a, iaculis ut nunc. Sed nec ipsum imperdiet, blandit nisi a, rutrum felis. In hac habitasse platea dictumst. Sed laoreet nibh sapien, eget malesuada nisl congue tristique. Aenean tristique lorem non magna semper, in iaculis nulla placerat. Fusce in nibh ligula. Vestibulum dignissim tempus dui, sit amet faucibus magna. Quisque mi magna, rhoncus a ipsum ut, consequat hendrerit nunc. Curabitur luctus commodo lobortis. Aenean porttitor odio placerat magna tristique, sed ornare arcu scelerisque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</string>
    <string name="transition_hero_item_destination_name">front_hero_detail</string>


    <string name="poke_api_url">https://pokeapi.co/api/v2/</string>
    <string name="basic_info">Basic Info</string>
    <string name="types">types :</string>
    <string name="captured_at_detail">Captured at %s</string>
    <string name="moves_pokemon_label_info">Moves</string>
    <string name="capture">capture</string>
    <string name="assign_a_name">Assign a Name?</string>
    <string name="pokemon_name">pokemon name</string>
    <string name="save">save</string>
    <string name="capturing">capturing ....</string>

    <string-array name="tabs_names">
        <item>@string/text_label_explore</item>
        <item>@string/text_label_community</item>
        <item>@string/text_label_my_team</item>
        <item>@string/text_label_captured</item>
    </string-array>
    <string-array name="types_detail_poke">
        <item>@string/wild_type</item>
        <item>@string/captured_type</item>
        <item>@string/captured_by_friend</item>
    </string-array>
</resources>